[package]
name = "shikieiki"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.6"
serde = "1.0.210"
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tracing-subscriber = "0.3.18"

[workspace]

members = [
    "crates/sakuya",
    "crates/aya",
]
