[package]
name = "aya"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
async-trait = "0.1.87"
clap = { version = "4.5.20", features = ["derive"] }
libloading = "0.8.6"
regex = "1.11.1"
reqwest = "0.12.12"
rustyscript = "0.11.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_bytes = "0.11.16"
serde_json = "1.0.132"
serde_yaml = "0.9.34"
thiserror = "2.0.12"
tokio = "1.43.0"
toml = "0.8.19"

# https://github.com/rscarson/rustyscript/issues/332
[patch.crates-io]
deno_media_type = { git = 'https://github.com/denoland/deno_media_type', tag = "0.2.6" }